# GreeNC

./: LICENSE  README.md
script2/MIReNA-2.0/: AUTHORS  ChangeLog  INSTALL  LICENCE  MIReNA.sh  MIReNA.sh~  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  testValid.pl
script2/MIReNA-2.0/@eaDir/: AUTHORS@SynoResource  COPYING@SynoResource  INSTALL@SynoResource  LICENCE@SynoResource  Licence_CeCILL_V2-en.txt@SynoResource  MIReNA.sh@SynoResource  MIReNA.sh~@SynoResource  NEWS@SynoResource  config.h.in@SynoResource  configure.ac@SynoResource  folding@SynoResource  fromDeepSeq@SynoResource  fromMirnas@SynoResource  install-sh@SynoResource  miRDeep@SynoResource  missing@SynoResource  testValid.pl@SynoResource
script2/MIReNA-2.0/asml/: Makefile.am  Makefile.in  asml.c  main.i  parse.i
script2/MIReNA-2.0/autom4te.cache/: output.0  output.2  traces.0  traces.1  traces.2
script2/MIReNA-2.0/datatest/: input.txt  miRNAs.fa  preMi.fa  precursors.fa  text.txt
script2/MIReNA-2.0/folding/: Makefile.am  Makefile.in  PS_dot.c  PS_dot.h  energy_par.c  energy_par.h  fold_vars.c  fold_vars.h  makefold.c  naview.c  naview.h  pair_mat.h  params.c  params.h  part_func.c  utils.c  utils.h
script2/MIReNA-2.0/fromDeepSeq/: dicer_signature.pl  filter_predictions_gbk.py  make_potential_precursors_signature.pl  make_precursors_with_reads.pl  obtain_predicted.pl  testValidHairpins.pl
script2/MIReNA-2.0/fromMirnas/: elim_doubl.py  executeAsml.sh  filter_gbk.py  getPutative.pl  makeFold.pl
script2/MIReNA-2.0/miRDeep/: auto_blast.pl  blastoutparse.pl  (+1 more)
(+55 files in other folders)
