## Process this file with automake to produce makefile.in
bin_PROGRAMS = makefold
makefold_SOURCES = config.h energy_const.h energy_par.c energy_par.h fold_vars.c fold_vars.h intloops.h makefold.c naview.c naview.h pair_mat.h params.c params.h part_func.c part_func.h PS_dot.c PS_dot.h utils.c utils.h
makefold_LDFLAGS = -Ifolding
CFLAGS = -Wall -O3
